# Harjoitus

./: .gitignore  CMakeLists.txt  Harjoitus.sln  README.md
Harjoitus/: Ben.txt  Bencher.h  ChessGrains.h  CircularBuffer.h  Clock.cpp  Clock.h  Database.cpp  Database.h  FrameTimer.h  Harjoitus.vcxproj  Harjoitus.vcxproj.filters  HelperFunc.h  Main.cpp  Rng.cpp  Rng.h  RngTests.cpp  RngTests.h  RobotFactory.cpp  RobotFactory.h  SayNumbers.cpp  SayNumbers.h  Vec2.h  data.txt  evalue.txt
